# framesmith

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  framesmith.rules.json  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
characters/glitch/: cancel_table.json  character.json  hurtboxes.json
characters/test_char/: assets.json  cancel_table.json  character.json
claude-plugin/: INDEX.md  README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/agents/: character-designer.md  state-debugger.md
crates/framesmith-fspack/: Cargo.toml
crates/framesmith-runtime/: Cargo.toml
crates/framesmith-runtime-wasm/: Cargo.toml
crates/framesmith-runtime-wasm/src/: lib.rs
crates/framesmith-runtime-wasm/tests/: integration.rs
crates/framesmith-runtime/src/: cancel.rs  collision.rs  frame.rs  lib.rs  resource.rs  state.rs
crates/framesmith-runtime/src/collision/: mod.rs  shapes.rs
crates/framesmith-runtime/tests/: integration.rs
docs/: README.md  architecture.md  character-authoring-guide.md  cli.md  data-formats.md  design.md  global-states.md  mcp-server.md  movement-reference.md  rules-spec.md  runtime-api.md  runtime-guide.md  troubleshooting.md  zx-fspack.md
docs/plans/: 2026-01-28-framesmith-core-implementation.md  2026-01-29-advanced-move-data-design.md  2026-01-29-mcp-server-design.md  2026-01-29-meta-rules-design.md  2026-01-29-meta-rules-implementation.md  2026-01-29-zx-fspack-export-and-nostd-reader.md  2026-01-30-fspk-resources-and-events.md  2026-01-30-ui-enhancements.md  2026-01-31-framesmith-runtime-phase2.md  2026-01-31-framesmith-runtime.md  (+8 more)
schemas/: rules.schema.json
scripts/: migrate-project.ts  tsconfig.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/codegen/: breakpoint.rs  fspk_format.rs  json_blob.rs  mod.rs  zx_fspack.rs  zx_fspack_format.rs
src-tauri/src/codegen/fspk/: builders.rs  export.rs  mod.rs  moves.rs  packing.rs  properties.rs  sections.rs  types.rs  utils.rs
src-tauri/src/commands/: character.rs  export.rs  mod.rs  project.rs
src-tauri/src/globals/: mod.rs
src-tauri/src/mcp/: handlers.rs  mod.rs  validation.rs  validators.rs
src-tauri/src/rules/: apply.rs  matchers.rs  mod.rs  property_schema.rs  registry.rs  validate.rs
src-tauri/src/schema/: assets.rs  effects.rs  hitbox.rs  mod.rs
src-tauri/src/variant/: mod.rs
src-tauri/tests/: fspk_roundtrip.rs  globals_integration.rs  mcp_commands_test.rs  pipeline_e2e.rs  zx_fspack_roundtrip.rs
(+158 files in other folders)
