[package]
name = "d-developmentnethercore-projectframesmith"
version = "0.1.0"
default-run = "d-developmentnethercore-projectframesmith"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "d_developmentnethercore_projectframesmith_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MCP server dependencies
rmcp = { version = "0.14", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
schemars = "1.0"
anyhow = "1.0"

[dev-dependencies]
framesmith-fspack = { path = "../crates/framesmith-fspack" }
tempfile = "3.24.0"

[[bin]]
name = "mcp"
path = "src/bin/mcp.rs"
test = false

[[bin]]
name = "generate_schema"
path = "src/bin/generate_schema.rs"
test = false
