[package]
name = "framesmith-runtime-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for framesmith-runtime"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
framesmith-runtime = { path = "../framesmith-runtime", features = ["std"] }
framesmith-fspack = { path = "../framesmith-fspack", features = ["std"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
