[package]
name = "framesmith-runtime"
version = "0.1.0"
edition = "2021"
description = "no_std stateless runtime for fighting game character simulation"
license = "MIT OR Apache-2.0"

[features]
default = []
alloc = ["framesmith-fspack/alloc"]
std = ["alloc", "framesmith-fspack/std"]

[dependencies]
framesmith-fspack = { path = "../framesmith-fspack" }

[dev-dependencies]
